fixed styles related to articls wrapping in to other column

--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -104,12 +104,12 @@ aside
     border-radius: 25px;
 }
 
-aside ol{margin:0;padding:0em 0em 0em 1em;}
+aside ol{padding:0;margin:0em 0em 0em 1em;}
 
 section.blog {column-count:2;}
-section.blog article {break-inside: avoid-column;}
+section.blog article {break-inside: avoid-column;padding:0.5em; margin:0;}
 section.blog article h2 {margin-top:0.25em;}
-section.blog article .tools {text-align:right;font-size:smaller;}
+section.blog article .tools {text-align:right;font-size:smaller;padding:0em;margin:0;}
 
 main, section
 {
